# deeplearning.ai-course

./: ._Building Your Own Database Agent  .gitignore  README.md  cursor-mcp-config.json  download_and_zip_all_files.ipynb  generate_codebase_context.py
AI Agents in LangGraph/: ._L1
Agentic Knowledge Graph Construction/: debug_wentuo.py  requirements.txt  test_gpt5_mini.py
Building and Evaluating Advanced RAG/: L3-Sentence_window_retrieval.ipynb  eval_questions.txt
Building and Evaluating Data Agents/: L3-NOTEBOOK-FIX.md  LESSONS-READY.md  MIGRATION-GUIDE.md  README-LOCAL-SETUP.md  README.md  SETUP_COMPLETE.md  SNOWFLAKE-COMMANDS.md  docker-compose.yml  helper.py  requirements-local.txt  requirements.txt  setup-local-data-agents.sh  start.sh  test_environment.py
Building with Llama 4/: Untitled.ipynb
Design, Develop, and Deploy Multi-Agent Systems with CrewAI/M3/assignment/code_review_flow/: pyproject.toml
Design, Develop, and Deploy Multi-Agent Systems with CrewAI/M3/assignment/code_review_flow/src/code_review_flow/: main.py
Design, Develop, and Deploy Multi-Agent Systems with CrewAI/M3/assignment/code_review_flow/src/code_review_flow/crews/code_review_crew/: crew.py
Design, Develop, and Deploy Multi-Agent Systems with CrewAI/M3/assignment/code_review_flow/src/code_review_flow/crews/code_review_crew/config/: tasks.yaml
Design, Develop, and Deploy Multi-Agent Systems with CrewAI/M3/assignment/code_review_flow/src/code_review_flow/crews/code_review_crew/guardrails/: guardrails.py
Event-Driven Agentic Document Workflows/: requirements.txt
(+222 files in other folders)
