[project]
name = "code_review_flow"
version = "0.1.0"
description = "code_review_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==0.203.1",
    "dill"
]

[project.scripts]
kickoff = "code_review_flow.main:kickoff"
run_crew = "code_review_flow.main:kickoff"
plot = "code_review_flow.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"